<resources>
    <string name="app_name">My Reminder</string>

    <string name="title_main_view">Principal</string>
    <string name="title_remainders">Recordatorios</string>
    <string name="title_remainder_detail">Detalle del Recordatorio</string>
    <string name="title_add_remainder">Agregar Recordatorio</string>
    <string name="title_provide_user_name">Proporciona tu nombre</string>

    <string name="format_hello">Hola %s</string>
    <string name="format_remainder_id">ID: %d</string>
    <string name="format_remainder_date">Creado: %s</string>

    <string name="label_title">Titulo</string>
    <string name="label_description">Descripción</string>
    <string name="label_when">Cuando</string>

    <string name="hint_user_name">Nombre de usuario</string>
    <string name="hint_remainder_title">Titulo</string>
    <string name="hint_remainder_description">Descripción</string>
    <string name="hint_remainder_day">Dia</string>
    <string name="hint_remainder_hour">Hora</string>

    <string name="button_add">Agregar</string>
    <string name="button_remainders">Recordatorios</string>
    <string name="button_save">Guardar</string>
    <string name="button_cancel">Cancelar</string>
    <string name="button_delete">Eliminar</string>
    <string name="button_update">Actualizar</string>

    <string name="error_no_name">Proporcione un nombre de usuario</string>

    <string name="message_empty_remainder_list">No hay elementos guardados en la Base de datos</string>

    <string name="item_default_remainder">My Remainder</string>
    <string name="item_default_remainder_date">Remainder date</string>
</resources>
