<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

    <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:background="@color/colorPrimaryDark"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"/>

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="16dp">

        <EditText
                android:id="@+id/edit_remainder_title"
                android:inputType="textCapSentences"
                android:hint="@string/hint_remainder_title"
                android:textSize="16sp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

        <EditText
                android:id="@+id/edit_remainder_description"
                android:layout_marginTop="16dp"
                android:minLines="6"
                android:gravity="top"
                android:inputType="textMultiLine"
                android:hint="@string/hint_remainder_description"
                android:textSize="16sp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
    </LinearLayout>

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

        <Button
                android:layout_margin="10dp"
                android:id="@+id/button_cancel"
                android:layout_weight="1"
                android:text="@string/button_cancel"
                android:layout_width="0dp"
                android:layout_height="wrap_content"/>

        <Button
                android:layout_margin="10dp"
                android:id="@+id/button_save"
                android:layout_weight="1"
                android:text="@string/button_save"
                android:layout_width="0dp"
                android:layout_height="wrap_content"/>
    </LinearLayout>
</LinearLayout>
