<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:context=".MainActivity">

    <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:background="@color/colorPrimaryDark"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"/>

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:gravity="center"
            android:padding="16dp">

        <Button
                android:id="@+id/button_add_remainder"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/button_add"/>

        <Button
                android:id="@+id/button_open_remainders"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/button_remainders"/>

        <TextView
                android:id="@+id/text_greetings"
                android:textColor="@color/colorBlack"
                android:textSize="16sp"
                android:layout_marginTop="40dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/format_hello"/>
    </LinearLayout>
</LinearLayout>